static/style.css
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Karla:wght@300;400&display=swap');


/* Global Styles */

body {
    background-color: bisque;
}

h5 {
    font-family: 'Karla', sans-serif;
}

.page-title {
    font-family: 'Karla', sans-serif;
    font-weight: 300;
    text-align: center;
    color: #976c6c;
    padding-top: 15px;
}

hr {
    border: 0;
    height: 2.6px;
    margin-top: 1px;
    margin-left: auto;
    margin-right: auto;
    width: 34%;
    background-image: linear-gradient(to right, rgb(226, 183, 122), rgba(206, 141, 100, 0.842), rgba(141, 92, 9, 0));
}

.form-font {
    font-family: 'Karla', sans-serif;
    font-weight: 300;
}

.paginator-text {
    font-family: 'Karla', sans-serif;
    font-weight: 300;
}

/* Navigation */

.login-status {
    font-size: 18px;
}

.logo-image {
    width: 100%;
    height: 100px;
    margin-left: -40px;
}

.bg-company-red {
    margin-top: 1px;
    padding: 20px;
    letter-spacing: 1.25px;
    background-color: bisque;
}

.nav-item a {
    font-family: 'Karla', sans-serif;
    font-weight: 400;
    font-size: 22px;
    margin-right: 20px;
}

.nav-item:hover {
    text-decoration: underline;
}

.dropdown-menu a {
    font-family: 'Karla', sans-serif;
    font-weight: 300;
    font-size: 17px;
}

.btn-search {
    background-color: #2C6DAA;
    color: #fff;
}

.btn-search:hover,
.btn-search:active {
    background-color: #4492d1;
    color: #fff;
}

/* Recipe Cards */

.card-text {
    font-family: 'Karla', sans-serif;
    font-style: italic;
}

.custom-recipe-card {
    width: 100%;
    height: 20px;
    object-fit: cover;
    min-height: 230px;
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
    transform: scale(0.96);
    transition: all 0.4s;
}

.recipe-card:hover .custom-recipe-card {
    transform: scale(1.00);
    transform: rotateY(180deg);
    clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 100%, 0% 100%);
}

.custom-recipe-title {
    font-family: 'Karla', sans-serif;
    font-weight: 300;
    font-size: 20px;
}

.recipe-card-body {
    font-family: 'Karla', sans-serif;
}

/* Recipe Detail page */

.custom-recipe-detail-img {
    max-height: 375px;
    object-fit: cover;
    width: 100%;
    padding: 1px;
}

.custom-recipe-detail-header {
    font-family: 'Karla', sans-serif;
    border: none;
    background-color: white;
    color: #886363;
    letter-spacing: 1px;
}

.description {
    background-color: bisque;
}

.title-underlined {
    text-decoration: underline;
}

.comment-author {
    font-family: 'Italiana', serif;
}

.btn-like {
    margin-left: -10px;
    margin-top: -10px;
    font-size: 28px;
    color: #4492d1;
    border: none;
    background: transparent;
}

.btn-like:hover,
.btn-like:active {
    color: #4492d1;
    background: transparent;
    border: none;
}

.recipe-text {
    font-family: 'Karla', sans-serif;
    font-weight: 300;
}

.like-recipe-text {
    font-weight: bold;
}

/* This class is also used on the account page links */
.link {
    font-weight: bold;
}

/* Comments section in recipe_detail template */

.comments {
    border: 0.5px solid rgb(222, 136, 90);
}

.comment-btn {
    float: right;
    font-size: 14px;
    letter-spacing: 1px;
    padding: 1px 1px;
    margin-top: -5px;
}

.comment-btn a {
    color: #2C6DAA;
}

.comment-btn a:hover,
.comment-btn a:active {
    color: #4492d1;
}

/* Account styling e.g login.html/ logout.html */

.btn-signup {
    background-color: #2C6DAA;
    color: #fff;
}

.btn-signup:hover,
.btn-signup:active {
    background-color: #4492d1;
    color: #fff;
}

.sign-up-link {
    color: #1C4D6D;
}

.sign-up-form {
    text-align: center;
    align-content: center;
    width: 570px;
    height: 450px;
    padding: 10px;
    border: 4px double rgb(41, 182, 218);
    border-radius: 4px;
    margin-bottom: 10px;
}

.login {
    text-align: center;
    align-content: center;
    padding: 12px;
}

.sign-in {
    margin-left: 130px;
    padding: 12px;
}

.login-form {
    text-align: center;
    align-content: center;
    width: 500px;
    height: 240px;
    padding: 25px;
    border: 4px double rgb(41, 182, 218);
    border-radius: 4px;
}

.logout-form {
    width: 500px;
    height: 150px;
    padding: 25px;
    border: 4px double rgb(41, 182, 218);
    border-radius: 4px;
}

/* Alert messages */

.btn-close {
    letter-spacing: 1px;
    float: right;
    margin-right: -40px;
    font-size: 16px;
    color: #4492d1;
    border: none;
    background: transparent;
}

.btn-close:hover,
.btn-close:active {
    font-size: 16px;
    border: none;
    background: transparent;
    color: rgb(34, 50, 54);
}

/* footer.html Styling */

.footer-break {
    border: 0;
    height: 2px;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    background-image: linear-gradient(rgb(226, 183, 122), rgba(206, 141, 100, 0.842), rgba(141, 92, 9, 0));
}

.social-icons {
    flex-direction: column;
    justify-content: center;
    text-align: center;
    font-size: 35px;
    list-style: none;
}

.social-icons li {
    display: inline;
}

.social-icons a {
    padding: 0 40px;
    text-decoration: none;
    color: #4492d1;
}

.social-icons a:hover {
    transform: scale(1.2);
}

/* Homepage */

.carousel-inner {
    margin-top: 30px;
    height: 380px;
    width: 100%;
}

.welcome-container {
    background-color: antiquewhite;
    width: 80%;
    height: 370px;
}

.welcome-image {
    width: 360px;
    height: 300px;
}

.welcome-title {
    font-family: 'Italiana', serif;
    font-size: 60px;
}

.welcome-text {
    font-family: 'Italiana', serif;
    font-size: 36px;
}

/* Home cards section */

.text-title {
    font-family: 'Italiana', serif;
    font-size: 28px;
}

.card-text-home {
    font-family: 'Karla', serif;
    font-style: italic;
    font-size: 17px;
}

.custom-home-card {
    width: 100%;
    height: 20px;
    object-fit: cover;
    min-height: 230px;
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
    transform: scale(0.96);
    transition: all 0.4s;
}

/* Home newsletter section */

.welcome-news-text {
    font-family: 'Italiana', serif;
    font-size: 41px;
}

.sign-up-container {
    margin-top: 20px;
    background-color: antiquewhite;
    width: 100%;
    justify-content: center;
    height: 280px;
}

/* Error pages */

.banner-403 {
    align-content: center;
    width: 750px;
    height: 500px;
    padding: 10px;
    border: 4px double rgb(41, 182, 218);
    border-radius: 4px;
    margin-bottom: 10px;
}

.banner-404 {
    align-content: center;
    width: 750px;
    height: 450px;
    padding: 10px;
    border: 4px double rgb(41, 182, 218);
    border-radius: 4px;
    margin-bottom: 10px;
}

.banner-500 {
    align-content: center;
    width: 750px;
    height: 390px;
    padding: 10px;
    border: 4px double rgb(41, 182, 218);
    border-radius: 4px;
    margin-bottom: 10px;
}

/* Newsletter Page */

.newsletter-container {
    margin-left: 60px;
    margin-top: 20px;
    background-color: antiquewhite;
    width: 90%;
    height: 340px;
}

.link-copy {
    color: #00458F;
}

/* Media Queries */

/* For Medium devices (tablets, less than 768px) */

@media screen and (max-width: 768px) {
    /* Homepage */

    .logo-image {
        width: 80%;
    }

    .carousel-inner {
        height: 300px;
        width: 100%;
    }

    .welcome-container {
        background-color: antiquewhite;
        width: 80%;
        height: 320px;
    }

    .welcome-title {
        font-size: 38px;
    }

    .welcome-text {
        font-size: 32px;
    }

    .mobile-view {
        display: none;
    }

    .sign-up-container {
        margin-left: 14px;
        margin-top: 20px;
        background-color: antiquewhite;
        width: 90%;
        justify-content: center;
        height: 300px;
    }

    /* Newsletter page */

    .newsletter-container {
        width: 80%;
        height: 400px;
    }

    /* Login/out styling */

    .sign-in {
        margin-left: 10px;
        padding: 12px;
    }

    .login-form {
        text-align: center;
        align-content: center;
        width: 500px;
        height: 240px;
        padding: 25px;
        border: 4px double rgb(41, 182, 218);
        border-radius: 4px;
    }

    .sign-up-form {
        text-align: center;
        align-content: center;
        width: 470px;
        height: 350px;
        padding: 25px;
        border: 4px double rgb(41, 182, 218);
        border-radius: 4px;
        margin-bottom: 10px;
    }
}

/* For Small devices (mobiles, less than 320px) */

@media screen and (max-width: 320px) {
    /* Homepage */

    .logo-image {
        width: 120%;
    }

    .page-title {
        font-size: 22px;
    }

    .dropdown-menu a {
        font-size: 14px;
    }

    .nav-item a {
        font-size: 16px;
    }

    #carouselExampleControls {
        display:none;
    }

    .welcome-container {
        background-color: antiquewhite;
        width: 80%;
        height: 325px;
    }

    .welcome-title {
        font-size: 26px;
    }

    .welcome-text {
        font-size: 18px;
    }

    .welcome-text-mobile {
        font-size: 16px;
    }

    .mobile-view {
        display: none;
    }

    .sign-up-container {
        margin-top: 20px;
        background-color: antiquewhite;
        width: 95%;
        justify-content: center;
        height: 350px;
    }

    .welcome-news-text {
        font-size: 24px;
    }

    .card-text-home {
        font-size: 14px;
    }

    /* Newsletter page */

    .newsletter-container {
        width: 300px;
        height: 400px;
        margin-left: 8px;
        padding: 2px;
    }

    /* Login/out styling */

    .sign-in {
        margin-left: 10px;
        padding: 12px;
    }

    .login-form {
        text-align: center;
        align-content: center;
        width: 255px;
        height: 280px;
        padding: 5px;
        border: 4px double rgb(41, 182, 218);
        border-radius: 4px;
    }

    .login-welcome-text {
        font-size: 16px;
    }

    .sign-up-form {
        text-align: center;
        align-content: center;
        width: 265px;
        height: 425px;
        padding: 25px;
        border: 4px double rgb(41, 182, 218);
        border-radius: 4px;
        margin-bottom: 10px;
    }

    .logout-form {
        width: 255px;
        height: 165px;
        padding: 25px;
        border: 4px double rgb(41, 182, 218);
        border-radius: 4px;
    }
}

